tests/ui/link-native-libs/manual-link-bad-form.rs
//@ compile-flags:-l static=

fn main() {
}

//~? ERROR library name must not be empty

// ferrocene-annotations: um_rustc_l
